# vectordb-hello-world

./: DEVELOPER_GUIDE.md  README.md  pyproject.toml
src/chroma/: README.md  hello.py  pyproject.toml
src/click_house/: README.md  hello.py
src/mongodb/: README.md  hello.py  pyproject.toml
src/my_scale/: README.md  hello.py  pyproject.toml
src/open_search/: README.md  hello-with-filter.py  hello.py
src/pg_vector/: README.md  hello.py  pyproject.toml
src/pinecone/: README.md  hello.py  pyproject.toml
src/qdrant/: README.md  hello.py  pyproject.toml
src/redis/: README.md  hello.py  pyproject.toml
src/vespa/: README.md  hello.py  pyproject.toml
src/vespa/vector-app/: services.xml
src/vespa/vector-app/schemas/: vector.sd
src/weaviate/: README.md  hello.py  hello_httpx_clean.py  hello_httpx_test.py  pyproject.toml
