[tool.poetry]
name = "vectordb-hello-world (pgvector)"
version = "0.1.0"
description = "Sample for querying vector DBs, pgVector edition."
authors = ["Daniel Doubrovkine <dblock@dblock.org>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "*"
pgvector = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
